--- a/practica1/Makefile
+++ b/practica1/Makefile
@@ -1,14 +1,21 @@
 CC=g++
+CFLAGS=-g
 SRC=neuron.cpp neuron.h cargar.cpp cargar.h
 PERCEPTRON=perceptron.cpp perceptron.h main_perceptron.cpp
 ADALINE=adaline.cpp adaline.h main_adaline.cpp
 MCCULLOH=mcculloh.cpp
 
 perceptron:  $(SRC) $(PERCEPTRON)
-	$(CC) $(SRC) $(PERCEPTRON)  -o perceptron
+	$(CC) $(CFLAGS) $(SRC) $(PERCEPTRON)  -o perceptron
 
 adaline: $(ADALINE) $(SRC)
-	$(CC) $(ADALINE) $(SRC) -o adaline
+	$(CC) $(CFLAGS) $(ADALINE) $(SRC) -o adaline
 
 mcculloh: $(MCCULLOH) $(SRC) 
-	$(CC) $(MCCULLOH) $(SRC) -o mcculloh
+	$(CC) $(CFLAGS) $(MCCULLOH) $(SRC) -o mcculloh
+
+clean: 
+	rm -f adaline
+	rm -f perceptron
+	rm -f adaline-unknown
+	rm -f perceptron-unknown
