Commit realizado sobre los cambios de la clase

--- a/practica2/Makefile
+++ b/practica2/Makefile
@@ -1,5 +1,5 @@
 CC=g++
-CFLAGS=-g
+CFLAGS=-g -Wall
 SRC=neuron.cpp neuron.h cargar.cpp cargar.h
 PERCEPTRON=perceptron.cpp perceptron.h main_perceptron.cpp
 
